# QtQuickScan

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac  remakesourcelist
QtQuickScan/: flagsandlibs
QtQuickScan/app/: Makefile.am
QtQuickScan/resources/docs/: help.html
QtQuickScan/resources/man/: qtquickscan.1
QtQuickScan/resources/pixmaps/: QtQuickScan.desktop
QtQuickScan/src/: ImageLabel.cpp  ImageLabel.h  MainWindow.cpp  MainWindow.h  QT_prefsWidgets.cpp  QT_prefsWidgets.h  Scanner.cpp  Scanner.h  Utilities.cpp  Utilities.h  globals.cpp  globals.h  main.cpp
