#
#
AC_INIT([QtQuickScan],[0.0.1],[PROJ],[QtQuickScan])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_CXX

#Q#T_MODULES="Qt6Gui >= 6.6.0"
#PKG_CHECK_MODULES(QT, $QT_MODULES)
#AC_SUBST(QT_CFLAGS)
#AC_SUBST(QT_LIBS)

QTWIDGETS_MODULES="Qt6Widgets >= 6.6.0"
PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)
AC_SUBST(QTWIDGETS_CFLAGS)
AC_SUBST(QTWIDGETS_LIBS)

QTCORE_MODULES="Qt6Core >= 6.6.0"
PKG_CHECK_MODULES(QTCORE, $QTCORE_MODULES)
AC_SUBST(QTCORE_CFLAGS)
AC_SUBST(QTCORE_LIBS)

QTPRINTSUPPORT_MODULES="Qt6PrintSupport >= 6.6.0"
PKG_CHECK_MODULES(QTPRINTSUPPORT, $QTPRINTSUPPORT_MODULES)
AC_SUBST(QTPRINTSUPPORT_CFLAGS)
AC_SUBST(QTPRINTSUPPORT_LIBS)

AC_CONFIG_FILES(Makefile QtQuickScan/app/Makefile)
AC_OUTPUT

